# platform/proxy.js
@@ -19,7 +19,7 @@ export function proxy(request) {
 export const config = {
 	matcher: [
 		{
-			source: '/((?!api|v1|w/|p/|healthz|readyz|\\.well-known|_next/static|_next/image|favicon.ico).*)',
+			source: '/((?!api|v1|w/|p/|\\.well-known|_next/static|_next/image|favicon.ico).*)',
 			missing: [
 				{ type: 'header', key: 'next-router-prefetch' },
 				{ type: 'header', key: 'purpose', value: 'prefetch' },
